# solana-huffman-encoding-challenge

./: .gitignore  Cargo.toml  README.md  callProgram.ts  encoder  encoder.rs  package.json  program.rs  tsconfig.json
benches/: compute_units.md  compute_units.rs
src/: entrypoint.rs  lib.rs  main.rs
src/instruction/: decoder.rs  mod.rs
tests/: encoder.rs  unit_tests.rs
