cargo-features = ["edition2024"]
[package]
name = "solana-huffman-encoding-challenge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
hex = "0.4.3"
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
bench-default = ["no-entrypoint", "std"]
