cargo-features = ["edition2024"]
[package]
name = "solana-huffman-encoding-challenge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
heapless = "0.8.0"
hex = "0.4.3"
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.213", features = ["derive"] }
assert_matches = "1.5.0"
arbitrary = { version = "1.4.1", features = ["derive"] }
mollusk-svm = { version = "=0.0.15", features = ["all-builtins"] }
mollusk-svm-bencher = { version = "=0.0.15" }
# mollusk-svm = { version = "=0.1.5", features = ["all-builtins"] }
proptest = "1.6.0"
rand = "0.8.5"
solana-account = { version = "=2.1.10", features = ["bincode"] }
solana-program = "=2.1.10"
solana-program-test = "=2.1.10"
solana-program-runtime = "=2.1.10"
solana-config-program = "=2.1.10"
solana-vote-program = "=2.1.10"
solana-sdk = "=2.1.10"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
bench-default = ["no-entrypoint", "std"]
